fixed sidebar on mobile

--- a/src/components/MainPage/Header/Header.css
+++ b/src/components/MainPage/Header/Header.css
@@ -1,5 +1,7 @@
 :root{
     --black-bg: black;
+    
+    --main-font-color: white;
 }
 
 
@@ -34,11 +36,14 @@
 }
 
 .navbar__dropdown-menu {
+    display: flex;
+    justify-content: flex-end ;
     position: fixed;
+    padding: 40px;
     top: 90px;
     right: 0;
-    width: 70%;
-    height: 100vh;
+    width: 100%;
+    height: 70vh;
     background: rgb(0, 0, 0);
 
     transform: translateX(100%); 
@@ -46,10 +51,26 @@
     pointer-events: none;
 
     transition: transform 0.4s ease, opacity 0.8s ease;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
 }
 
 .navbar__dropdown-menu.open {
     transform: translateX(0);
     opacity: 1;
     pointer-events: auto;
+}
+
+.dropdown-menu__link-list{
+    display: flex;
+    flex-direction: column;
+    gap: 2%;
+    list-style: none;
+    color: var(--main-font-color);
+}
+
+.link-list__link{
+    text-align: end;
+    font-size: 1.5rem;
+
 }
